--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,8 @@ owner: nibol # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: API
+    url: https://api.nibol.co/v2
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
