--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,13 @@ repo: upptime # The name of this repository
 sites:
   - name: API
     url: https://api.nibol.co/v2
+  - name: App
+    url: https://app.nibol.co
+  - name: Manager
+    url: https://business.nibol.co
+  - name: Host
+    url: https://manager.nibol.co
+    
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -13,13 +20,11 @@ status-website:
   baseUrl: /upptime
   logoUrl: https://avatars.githubusercontent.com/u/56720033?s=200
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  # introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  # introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
